# app/models/database/__init__.py
@@ -1,0 +1,2 @@
+from app.models.database.patient import Patient
+from app.models.database.visit import Visit
